--- a/semi_report/semi_report_arita.tex
+++ b/semi_report/semi_report_arita.tex
@@ -29,7 +29,7 @@
 
 \noindent
 $0 \leq \theta \leq \frac{\pi}{2}$, $0 \leq y_s \leq \frac{d}{2}$ より,
-この範囲において図1.1において$\theta$と$y_s$がなす点が境界を含む斜線部の範囲内に含まれる確率を求めればよい.
+この範囲において図(1.1)おいて$\theta$と$y_s$がなす点が境界を含む斜線部の範囲内に含まれる確率を求めればよい.
 
 \noindent
 よって確率$p$は,
@@ -41,12 +41,12 @@ $0 \leq \theta \leq \frac{\pi}{2}$, $0 \leq y_s \leq \frac{d}{2}$ より,
 
 \subsection{}
 \noindent
-1.2式より,
+式(1.2)より,
 \begin{equation}
    \pi \sim  \frac{2l}{pd} \tag{1.3}
 \end{equation}
 と表せるので, $y_s$と$\theta$を乱数生成させることで1.1式と比較し,
-それをもとに1.3式によって$\pi$を実測する.
+それをもとに(1.3)式によって$\pi$を実測する.
 
 \section{}
 \subsection{}
@@ -55,15 +55,71 @@ $0 \leq \theta \leq \frac{\pi}{2}$, $0 \leq y_s \leq \frac{d}{2}$ より,
 \begin{equation}
     m\lambda^2 + \zeta\lambda + k = 0 \tag{2.1}
 \end{equation}
-という特性方程式2.1を得る.この解は
+という特性方程式(2.1)を得る.この解は
 \begin{equation}
     \lambda = \frac{-\zeta + \sqrt{\zeta^2 - 4mk}}{2} \tag{2.2}
 \end{equation}
-であり,
+であり,ルートの中身について場合分けすると,減衰振動,過減衰,臨界減衰を示す条件はそれぞれ
+\begin{align*}
+    \zeta & \geq \sqrt{4mk}　　 (減衰振動) \tag{2.3}\\
+    \zeta & \leq \sqrt{4mk}　　 (過減衰) \tag{2.4}\\
+    \zeta & = \sqrt{4mk}　　 (臨界減衰) \tag{2.5}\\
+\end{align*}
+となる.
 
 \subsection{}
 \noindent
+式(1)について$x = \tilde{x}$, $t = t_0 \tilde{t}$, $\dot{x} = v = \frac{a}{t_0} \tilde{v}$
+を代入して
+\begin{equation}
+    m \frac{a}{t_0} \dot{\tilde{v}}(\tilde{t}) = -\zeta \frac{a}{t_0} \tilde{v}(\tilde{t})
+    -k a \tilde{x}(\tilde{t}) \tag{2.6}
+\end{equation}
+ここで
+\begin{align*}
+    \frac{d \tilde{v}(\tilde{t})}{dt} &= \frac{d \tilde{v}(\tilde{t})}{d \tilde{t}} \cdot \frac{d \tilde{t}}{dt} \\
+    &= \frac{1}{t_0} \frac{d \tilde{v}(\tilde{t})}{d \tilde{t}} \tag{2.7}
+\end{align*}
+より,式(2.6)は
+\begin{equation}
+    \frac{m}{t_0^2} \frac{d \tilde{v}(\tilde{t})}{d \tilde{t}} = - \frac{\zeta}{t_0} \tilde{v}(\tilde{t})
+    -k \tilde{x}(\tilde{t}) \tag{2.8}
+\end{equation}
+とあらわされる. 式(2.8)左辺について, 刻み幅$\Delta \tilde{t}$に関するオイラー法による離散化を実行すると
+\begin{equation}
+    \frac{d \tilde{v}(\tilde{t})}{d \tilde{t}} = \frac{\tilde{v}(\tilde{t} + \Delta \tilde{t}) - \tilde{v}(\tilde{t})}{\Delta \tilde{t}} 
+    \tag {2.9}
+\end{equation}
+より, これを式(2.8)に代入して整理すると
+\begin{align}
+    \tilde{v}(\tilde{t} + \Delta \tilde{t}) = \left(1 - \frac{\zeta t_0 \Delta \tilde{t}}{m}\right) \tilde{v}(\tilde{t})
+    - \frac{k t_0^2 \Delta \tilde{t}}{m} \tilde{x}(\tilde{t}) \tag{2.10}
+\end{align}
+また$\tilde{x}(\tilde{t} + \Delta \tilde{t})$について, 半陰的オイラー法に基づき
+\begin{align*}
+    \tilde{x}(\tilde{t} + \Delta \tilde{t}) &= \tilde{x}(\tilde{t}) + \tilde{v}(\tilde{t} + \Delta \tilde{t}) \Delta \tilde{t} \\
+    &= \left(1 - \frac{k t_0^2 \Delta \tilde{t}}{m}\right) \tilde{x}(\tilde{t}) 
+    + \left(1 - \frac{\zeta t_0 \Delta \tilde{t}}{m}\right) \tilde{v}(\tilde{t}) \Delta \tilde{t} \tag{2.11}
+\end{align*}
+以上より, 求める2項間漸化式は
+\begin{subequations}
+    \begin{align}    % equation 環境にしても同じ結果となる．
+    \left\{
+        \begin{aligned}
+        & \tilde{v}(\tilde{t} + \Delta \tilde{t}) = \left(1 - \frac{\zeta t_0 \Delta \tilde{t}}{m}\right) \tilde{v}(\tilde{t})
+        - \frac{k t_0^2 \Delta \tilde{t}}{m} \tilde{x}(\tilde{t})\\
+        & \tilde{x}(\tilde{t} + \Delta \tilde{t} = \left(1 - \frac{k t_0^2 \Delta \tilde{t}}{m}\right) \tilde{x}(\tilde{t}) 
+        + \left(1 - \frac{\zeta t_0 \Delta \tilde{t}}{m}\right) \tilde{v}(\tilde{t}) \Delta \tilde{t}
+        \end{aligned}
+    \right. \tag{2.12}
+    \end{align}
+\end{subequations}
+となる.
+
 \subsection{}
 \noindent
-\subsection{}\noindent
+
+
+\subsection{}
+\noindent
 \end{document}
