edited files for problem1

--- a/semi_report/problem_1/problem1.ipynb
+++ b/semi_report/problem_1/problem1.ipynb
@@ -4,11 +4,55 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
+    "# %load pi_plot.py\n",
     "import matplotlib\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "%config InlineBackend.figure_format = 'retina'\n",
+    "import matplotlib.cm as cm  # colormap\n",
+    "import numpy as np\n",
+    "\n",
+    "plt.rcParams[\"text.usetex\"] =True \n",
+    "fig = plt.figure()\n",
+    "\n",
+    "data = np.genfromtxt('buffon.txt')\n",
+    "\n",
+    "plt.plot((data[:,0], data[:,1]))\n",
+    "plt.set_title(\"Calculate pi using Buffon's pin\")\n",
+    "plt.xscale('log')\n",
+    "plt.xlabel('number of dropping pins')\n",
+    "plt.ylabel('measured Pi')\n",
+    "\n",
+    "plt.savefig('problem1-2.png')\n",
+    "plt.savefig('problem1-2.pdf')\n",
+    "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
