--- a/semi_report/semi_report_arita.tex
+++ b/semi_report/semi_report_arita.tex
@@ -217,10 +217,11 @@ $\frac{t_0}{t_d}=T$とおいたとき
 \end{figure}
 
 \newpage
-※添付ファイル
-・buffon.py
-・ploblem2.py
-・ploblem1.ipynb
+\noindent
+※添付ファイル \\
+・buffon.py \\
+・ploblem2.py \\
+・ploblem1.ipynb \\
 ・ploblem2.ipynb
 
 \end{document}
