--- a/final_report/final_report_arita.tex
+++ b/final_report/final_report_arita.tex
@@ -132,7 +132,7 @@
 
 \begin{equation}
     m^* \frac{\bm{\tilde{v}}(\tilde{t}+\Delta \tilde{t})-\bm{\tilde{v}}(\tilde{t})}{\Delta \tilde{t}}
-    = \bm{\tilde{v}}(\tilde{t}) + \sqrt{\frac{2}{\Delta \tilde{t}}}\bm{R}_G \tag{1.12}
+    = -\bm{\tilde{v}}(\tilde{t}) + \sqrt{\frac{2}{\Delta \tilde{t}}}\bm{R}_G \tag{1.12}
 \end{equation}
 これを整理すると
 
@@ -172,110 +172,102 @@
 \section{}
 % (1)
 \subsection{}
+\noindent
+与えられた $U(r)$ に $r=r_{cut}$ を代入すると
+
+\begin{align*}
+    U(r_{cut}) &= U_0(r_{cut}) - u_0(r_{cut}) - U_0'(r_{cut}) (r_{cut} - r_{cut}) \\
+    &= 0 \tag{2.1}
+\end{align*}
+また
+
+\begin{equation}
+    U'(r) = U_0''(r - r_{cut}) \tag{2.2}
+\end{equation}
+より
+
+\begin{align*}
+    U'(r_{cut}) &= U_0''(r_{cut} - r_{cut}) \\
+    &= 0 \tag{2.3}
+\end{align*}
+
+% (2)
+\subsection{}
+\noindent
+与えられた $U_0(r)$ について
+
+\begin{align*}
+    U_0'(r) &= 4 \epsilon \qty{-\frac{12a^{12}}{r^{13}} + \frac{6a^6}{r^7}} \\ 
+    &= 24 \epsilon \qty{-\frac{2a^{12}}{r^{13}} + \frac{a^6}{r^7}} \tag{2.4}
+\end{align*}
+より, 今回用いる平滑化ポテンシャルは
+
+\begin{equation}
+    U(r) = 4 \epsilon \qty{\qty(\frac{a}{r})^{12} - \qty(\frac{a}{r})^6}
+    - 24 \epsilon \qty{-\frac{2a^{12}}{r_{cut}^{13}} + \frac{a^6}{r_{cut}^7}} r
+    + C \tag{2.5}
+\end{equation}
+ここで $C$ はrによらない定数. 
+式(2.5)をrについて微分すると
+\begin{equation}
+    U'(r) = 24 \epsilon \qty{-\frac{2a^{12}}{r^{13}} + \frac{a^6}{r^7}}
+    - 24 \epsilon \qty{-\frac{2a^{12}}{r_{cut}^{13}} + \frac{a^6}{r_{cut}^7}} 
+    \tag{2.6}
+\end{equation}
+これを用いてシミュレーションを行う.
 
 \noindent
+与えられた条件でシミュレーションを行った後の1000個の2次元円盤粒子の配置を図3に示す.
+なお, 粒子の初期位置は正方格子とした.
+シミュレーションの実行手順としては, まずデータをproblem2-2.cppで出力し, 
+その後problem2.ipynbを用いてプロットした.
 
-% \noindent
-% 式(1)は定数係数の二階微分方程式より, $x=e^{\lambda x}$とおいて整理すると
-% \begin{equation}
-%     m\lambda^2 + \zzeta\lambda + k = 0 \tag{2.1}
-% \end{equation}
-% という特性方程式(2.1)を得る. この解は
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.6]{problem_2/2-2/problem2-2.pdf}
+    \caption{$T^*=5.0$ , 時間 $10t_0$ のシミュレーション後の2次元円盤粒子配置}
+\end{figure}
 
-% \begin{equation}
-%     \lambda = \frac{-\zzeta + \sqrt{\zzeta^2 - 4mk}}{2} \tag{2.2}
-% \end{equation}
-% であり, ルートの中身について場合分けすると, 減衰振動, 過減衰, 臨界減衰を示す条件はそれぞれ
+% (3)
+\subsection{}
+\noindent
+与えられた条件でシミュレーションを行った後の1000個の2次元円盤粒子の配置を図4に示す.
+なお, 粒子の初期位置は(2)の配置とした.
+シミュレーションの実行手順としては, まずデータをproblem2-3.cppで出力し, 
+その後problem2.ipynbを用いてプロットした.
 
-% \begin{align*}
-%     \zzeta & > \sqrt{4mk}　　 (減衰振動) \tag{2.3}\\
-%     \zzeta & < \sqrt{4mk}　　 (過減衰) \tag{2.4}\\
-%     \zzeta & = \sqrt{4mk}　　 (臨界減衰) \tag{2.5}\\
-% \end{align*}
-% となる.
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.6]{problem_2/2-3/problem2-3.pdf}
+    \caption{$T^*=0.2$ , 時間 $1500t_0$ のシミュレーション後の2次元円盤粒子配置}
+\end{figure}
 
 
-% \subsection{}
+% (4)
+\subsection{}
+\noindent
 
-% \noindent
-% 式(1)について$x = \tilde{x}$, $t = t_0 \tilde{t}$, $\dot{x} = v = \frac{a}{t_0} \tilde{v}$
-% を代入して
-% \begin{equation}
-%     m \frac{a}{t_0} \dot{\tilde{v}}(\tilde{t}) = -\zzeta \frac{a}{t_0} \tilde{v}(\tilde{t})
-%     -k a \tilde{x}(\tilde{t}) \tag{2.6}
-% \end{equation}
-% ここで
+% (5)
+\subsection{}
+\noindent
+与えられたMaxwell-Boltzmann分布に $T^*=\frac{k_B}{T}$ を代入すると
 
-% \begin{align*}
-%     \frac{d \tilde{v}(\tilde{t})}{dt} &= \frac{d \tilde{v}(\tilde{t})}{d \tilde{t}} \cdot \frac{d \tilde{t}}{dt} \\
-%     &= \frac{1}{t_0} \frac{d \tilde{v}(\tilde{t})}{d \tilde{t}} \tag{2.7}
-% \end{align*}
-% より, 式(2.6)は
+\begin{equation}
+    f(v_x) = \sqrt{\frac{m}{2\pi \epsilon T^*}}e^{-\frac{mv_x^2}{2\epsilon T^*}} \tag{2.7}
+\end{equation}
+$f(v_x)$ は速さの逆数を持っていることと $v=\frac{a}{t_0}\tilde{v}$ より
+$f(v_x)=\frac{t_0}{a} \tilde{f}(\tilde{v_x})$ . 
+よって $t_0=\sqrt{\frac{ma^2}{\epsilon}}$ より
 
-% \begin{equation}
-%     \frac{m}{t_0^2} \frac{d \tilde{v}(\tilde{t})}{d \tilde{t}} = - \frac{\zzeta}{t_0} \tilde{v}(\tilde{t})
-%     -k \tilde{x}(\tilde{t}) \tag{2.8}
-% \end{equation}
-% と表される. 式(2.8)左辺について, 刻み幅$\Delta \tilde{t}$に関するオイラー法による離散化を実行すると
+\begin{align*}
+    \tilde{f}(\tilde{v_x}) &= \frac{a}{t_0}\sqrt{\frac{m}{2\pi \epsilon T^*}}e^{-\frac{ma^2\tilde{v_x}^2}{2t_0^2\epsilon T^*}} \\
+    &= \sqrt{\frac{1}{2\pi T^*}}e^{-\frac{\tilde{v_x}^2}{2T^*}} \tag{2.8}
+\end{align*}
+となり, 題意に適する.
 
-% \begin{equation}
-%     \frac{d \tilde{v}(\tilde{t})}{d \tilde{t}} = \frac{\tilde{v}(\tilde{t} + \Delta \tilde{t}) - \tilde{v}(\tilde{t})}{\Delta \tilde{t}} 
-%     \tag {2.9}
-% \end{equation}
-% より, これを式(2.8)に代入して整理すると
-
-% \begin{align}
-%     \tilde{v}(\tilde{t} + \Delta \tilde{t}) = \left(1 - \frac{\zzeta t_0 \Delta \tilde{t}}{m}\right) \tilde{v}(\tilde{t})
-%     - \frac{k t_0^2 \Delta \tilde{t}}{m} \tilde{x}(\tilde{t}) \tag{2.10}
-% \end{align}
-% また$\tilde{x}(\tilde{t} + \Delta \tilde{t})$について, 半陰的オイラー法に基づき
-
-% \begin{align*}
-%     \tilde{x}(\tilde{t} + \Delta \tilde{t}) &= \tilde{x}(\tilde{t}) + \tilde{v}(\tilde{t} + \Delta \tilde{t}) \Delta \tilde{t} \\
-%     &= \left(1 - \frac{k t_0^2 \Delta \tilde{t}}{m}\right) \tilde{x}(\tilde{t}) 
-%     + \left(1 - \frac{\zzeta t_0 \Delta \tilde{t}}{m}\right) \tilde{v}(\tilde{t}) \Delta \tilde{t} \tag{2.11}
-% \end{align*}
-% 以上より, 求める2項間漸化式は
-
-% となる.
-
-% % (3)
-% \subsection{}
-
-% \noindent
-% 式(2.12)について$t_d = \frac{m}{\zzeta}$, $t_s = \sqrt{\frac{m}{k}}$を代入すると
-% となる.
-
-% % (4)
-% \subsection{}
-% \noindent
-
-% 式(2.13)において$t_s=t_0$を代入し,さらに$\frac{t_0}{t_d}=T$とすると
-% % \begin{subequations}
-% %     \begin{align}
-% %     \left\{
-% %         \begin{aligned}
-% %         & \tilde{v}(\tilde{t} + \Delta \tilde{t}) = \left(1 - T \Delta \tilde{t} \right) \tilde{v}(\tilde{t})
-% %         - \tilde{x}(\tilde{t}) \Delta \tilde{t}\\
-% %         & \tilde{x}(\tilde{t} + \Delta \tilde{t}) = (1 - \Delta \tilde{t} ) \tilde{x}(\tilde{t}) 
-% %         + \left(1 - T \Delta \tilde{t} \right) \tilde{v}(\tilde{t}) \Delta \tilde{t}
-% %         \end{aligned}
-% %     \right} \tag{2.14}
-% %     \end{align}
-% % \end{subequations}
-% となる.
-% また, $t_d = \frac{m}{\zzeta}$, $t_s = \sqrt{\frac{m}{k}}$, $t_s=t_0$を式(2.3)-(2.5)に代入することで
-% $\frac{t_0}{t_d}=T$とおいたとき
-% \begin{align*}
-%     T & < 2　　 (減衰振動) \tag{2.3}\\
-%     T & > 2　　 (過減衰) \tag{2.4}\\
-%     T & = 2　　 (臨界減衰) \tag{2.5}\\
-% \end{align*}
-% となるので, $T=0, 1, 2, 3, 4$のときの$x(t)$を図2.1にプロットした.
-% 各$T$における$t$と$x(t)$の関係をproblem2.pyを用いて出力し, それらをproblem2.ipynb
-% によって1つの図にプロットした. 
-% ここで, $\Delta t=0.01$, $\frac{a}{t_0}=0.1$として計算し, $t$の範囲は(0,500)とした. 
-
+% (6)
+\subsection{}
+\noindent
 
 \newpage
 \noindent
