--- a/final_report/final_report_arita.tex
+++ b/final_report/final_report_arita.tex
@@ -251,7 +251,7 @@
 \subsection{}
 \noindent
 与えられた条件でシミュレーションを行った後の1000個の2次元円盤粒子の配置を図4に示す.
-なお, 粒子の初期位置は(2)の配置とした.
+なお, 粒子の初期位置,速度は(2)の配置とした.
 シミュレーションの実行手順としては, まずデータをproblem2-3.cppで出力し, 
 その後problem2.ipynbを用いてプロットした.
 
@@ -262,9 +262,13 @@
 \end{figure}
 
 
-% (4)
-\subsection{}
-\noindent
+% % (4)
+% \subsection{}
+% \noindent
+% 与えられた条件でシミュレーションを行った後の1000個の2次元円盤粒子の配置を図4に示す.
+% なお, 粒子の初期位置,速度は(3)の配置とした.
+% シミュレーションの実行手順としては, まずデータをproblem2-4.cppで出力し, 
+% その後problem2.ipynbを用いてプロットした.
 
 % (5)
 \subsection{}
@@ -284,15 +288,18 @@ $f(v_x)=\frac{t_0}{a} \tilde{f}(\tilde{v_x})$ .
 \end{align*}
 となり, 題意に適する.
 
-% (6)
-\subsection{}
-\noindent
+% % (6)
+% \subsection{}
+% \noindent
 
 \newpage
 \noindent
 ※添付ファイル \\
-・buffon.py \\
-・ploblem2.py \\
+・langevin.py \\
+・problem1-5 langevin.cpp \\
+・problem1-5 analyze.cpp \\
+・ploblem2-2.cpp \\
+・problem2-3.cpp  \\
 ・ploblem1.ipynb \\
 ・ploblem2.ipynb
 
